# taskiq-anyio-4.7.0

./: .dockerignore  .gitignore  docker-compose.yml  pyproject.toml
docker/: Dockerfile  entrypoint.sh  env
src/: taskiq_app.py
src/ggg/: settings.py
src/users/: apps.py
