[tool.poetry]
name = "ppp"
description = "Ppp Service"
version = "0.0.0"
authors = ["ppp team"]

[tool.poetry.dependencies]
python = "^3.12"
django = "5.1.4"
nest-asyncio = "1.6.0"
taskiq = "0.11.10"
taskiq-aio-pika = "0.4.1"

[tool.poetry.group.dev.dependencies]
taskiq = { version = "0.11.10", extras = ["reload"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
